documentation for sign up activate
