# app/Notifications/PasswordResetRequest.php
@@ -43,7 +43,7 @@ class PasswordResetRequest extends Notification
     {
         $url = url('/api/password/find/' . $this->token);
         return (new MailMessage)
-            ->line('You are receiving this email because we        received a password reset request for your account.')
+            ->line('You are receiving this email because we  received a password reset request from your account.')
             ->action('Reset Password', url($url))
             ->line('If you did not request a password reset, no further action is required.');
     }
